# autobot

./: .claude  .codex  .env.example  .gitignore  Makefile  README.md  explain-plan.md  pitch-deck.html  pyproject.toml
autoresearch_robotics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
blog/: draft.md  outline.md
data/: demo.sqlite3
demo/: README.md  __init__.py  app.py  demo_script.md  migrations.py  models.py  service.py  store.py  supabase_client.py  workspace_store.py
plans/: 00-master-platform-plan.md  2026-04-18-agentic-simulator-roadmap.md  2026-04-19-design-diversity-and-geometry-overhaul.md  CLAUDE.md  gvhmr-modal-endpoint-checklist.md
research/: 2026-04-19-geometry-expansion-plan.md  2026-04-19-phase-14-20-implementation-practices.md  2026-04-19-phase-21-geometry-practices.md  2026-04-19-systematic-debugging-followups.md  CURRENT_RESEARCH_OUTLINE.md  INTERPRETABILITY_INVESTIGATION.md  README.md  RESEARCH_PLAN.md
scripts/: check_gvhmr_endpoint.py  gvhmr_modal_probe.py  modal_trial_runner.py  modal_vae_train.py  run_demo_evolution.py  seed_clips.py
tests/: e2e_smoke.py  test_cad.py  test_component_ir.py  test_components.py  test_design_ir.py  test_design_pipeline.py  test_design_workspace_runtime.py  test_droid_fallback.py  test_engineering_render.py  test_evolutions.py  test_export_routes.py  test_frontend_workspace_contract.py  test_gnn.py  test_hitl_routes.py  test_ingest.py  test_migrations.py  test_mjcf_compiler.py  test_mjx_screener.py  test_modal_dispatch.py  test_morphology.py  test_orchestrator.py  test_phase1_store.py  test_phase3_api.py  (+12 more)
(+723 files in other folders)
